--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+fastapi[standard] >= 0.111.1
+ivcap-fastapi >= 0.3.0
+ivcap_ai_tool >= 0.6.5
+
 crewai==0.108.0
 crewai-tools==0.38.1
 dataclass_wizard
 pydantic
 datamodel_code_generator
-ivcap-fastapi >= 0.3.0
-ivcap_ai_tool >= 0.6.3
