--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "langchain-core (>=0.3.62,<0.4.0)",
     "datamodel-code-generator (>=0.30.1,<0.31.0)",
     "embedchain (>=0.1.128,<0.2.0)",
-    "crewai-tools (>=0.46.0,<0.47.0)"
+    "crewai-tools (>=0.46.0,<0.47.0)",
+    "ivcap-service (>=0.5.8,<0.6.0)"
 ]
 
 [tool.poetry-plugin-ivcap]
